# rp-content-service

./: .env.example  .gitignore  AGENTS.md  BACKLOG_CODEX.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  ai.py  config.py  db.py  main.py  models.py  news_ranking.py  scheduler.py  text_cleanup.py  time.py
app/jobs/: news.py  races.py
app/parsers/: google_races_rss.py  ical.py  minhas_inscricoes.py  news_rss.py  ticket_sports.py
tests/: test_ai.py  test_health.py  test_news_ai.py  test_news_ranking.py  test_scheduler.py  test_text_cleanup.py  test_time.py
