[tool.poetry]
name = "rp-content-service"
version = "0.1.3"
description = "Run Personal content discovery and editorial radar service"
authors = ["Run Personal <contato@runpersonal.com.br>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = { version = "^0.32.1", extras = ["standard"] }
httpx = "^0.28.0"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
apscheduler = "^3.10.4"
openai = "^1.57.0"
beautifulsoup4 = "^4.12.3"
feedparser = "^6.0.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.4"

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8002"
dev = "uvicorn app.main:app --reload --port 8002"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
